--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Search from "astro-pagefind/components/Search";
 
 const pagefindEnabled = !["1", "true", "yes"].includes(
-  (process.env.SKIP_PAGEFIND ?? "").toLowerCase(),
+  (import.meta.env.SKIP_PAGEFIND ?? "").toLowerCase(),
 );
 
 const uiOptions = {
