--- a/src/pages/stadtteil/[name].astro
+++ b/src/pages/stadtteil/[name].astro
@@ -39,7 +39,7 @@ const { filterData, filterOptions } = buildFilterData(
 );
 ---
 
-<Layout>
+<Layout title={stadtteilName}>
   <PaperListingPage
     title={stadtteilName}
     papers={papers}
