--- a/src/pages/stadtteile.astro
+++ b/src/pages/stadtteile.astro
@@ -11,7 +11,7 @@ const countMap = await getStadtteilCounts();
 const base = import.meta.env.BASE_URL;
 ---
 
-<Layout>
+<Layout title="Stadtteile">
   <PageContainer class="stadtteile-page">
     <h1 class="page-header">Vorlagen nach Stadtteil</h1>
     <p class="subtitle">
