--- a/src/pages/suche.astro
+++ b/src/pages/suche.astro
@@ -10,7 +10,7 @@ const pagefind = resolvePagefindAvailability(import.meta.env.SKIP_PAGEFIND, {
 });
 ---
 
-<Layout>
+<Layout title="Suchergebnisse">
   <PageContainer class="search-results-page">
     <h1 class="page-header">Suchergebnisse</h1>
     {
