--- a/src/pages/vorlagen.astro
+++ b/src/pages/vorlagen.astro
@@ -17,7 +17,7 @@ const { filterData, filterOptions } = buildFilterData(
 );
 ---
 
-<Layout>
+<Layout title="Vorlagen">
   <PaperListingPage
     title="Vorlagen"
     papers={papers}
